remove unused css's

--- a/ui-react/public/index.html
+++ b/ui-react/public/index.html
@@ -11,8 +11,8 @@
     <title>MeetEasier</title>
 
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:100,300,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css" />
+    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.css" /-->
+    <!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.min.css" /-->
 
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
